[package]
name = "key-value-store"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1.44.1", features = ["full"] }
